assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* General project styls */
    font-family: "Montserrat", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: #010463;
}

h1, h2 {
    font-family: "Architects Daughter", cursive;
    font-weight: 200;
    font-style: normal;
    text-transform: capitalize;
    color: #010463;
}

/* Header */
header {
    background-color: #d9d9d9;
    padding: 0.5rem 0.5rem;
    display: flex;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px #010463;
    justify-content: space-between;
    align-items: center;
}

header a {
    text-decoration: none; 
    color: #4484ce;
}

#logo-image-name-container {
    display: flex;
}

#logo-image-container img {
    height: 40px;   
    width: 40px;
    margin-right: 5px;
}   

#menu {
    font-size: 110%;
    letter-spacing: 4px;
    list-style-type: none;
}

#menu li {
    margin-bottom: 2em;
}

.active {
    color: #010463;
    font-weight: bolder;
    font-style: italic;
}

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #d9d9d9;
    width: 100%;
    left: 0;
    text-align: center;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #010463;
    display: none;
    /* Tell the child element to start at the bottom of parent element */
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

.fa-solid {
    color: #4484ce;
}

/* Main Content */
main {
    /* Make main element take up any surplus space to push footer down */
    flex: 1 0 auto;
    margin-top: 60.5px;
}

/* Hero section */
#hero {
    height: 600px;
    width: 100%; 
    background: url("../images/asian-boy-library-room-school.jpg") no-repeat center center/cover;
    background-position: 85%; 
    position: relative;
}

#cover-text {
    background-color: rgba(68, 132, 206, .7);
    position: absolute; 
    /* font-size: 140%; */
    bottom: 20px;
    width: 80%;
    min-height: 90px;
    padding: 20px;
    padding-left: 20px;
    right: 0px;
    border-radius: 4px;
}

#cover-text > h2 {
    color: #d9d9d9;
    text-align: center;
}

div.section-title-container {
    padding: 34px 20px;
    background-color: #f9cf00;
    margin-left: 0;
    margin-right: 0;
}

h2.nested {
    display: flex;
    text-align: center;
    align-items: center;
}

h2.nested::before {
    content: '';
    width: 20px;
    border-bottom: solid #010463 2px;
    min-width: 94px;
    margin-right: 20px;
}

h2.nested::after {
    content: '';
    width: 40px;
    border-bottom: solid #010463 2px;
    min-width: 94px;
    margin-left: 20px;
}

div.picholder {
    margin: 1rem 0;
}

.section-image {
    width: 304px;
    height: auto;
    object-fit: cover;
}

/* Footer */
#social-networks {
    background-color: #d9d9d9;
    text-align: center;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 160%;
    padding: 5%;
    color: #4484ce;
}

/* media query: tablets and larger (768px and larger) */
@media  screen and (min-width: 768px) {

    /* Header */

    header {
        box-shadow: none;
    }

    nav {
        display: block;
        position: absplute;
        width: 100%;
        padding: 0 8px;
    }

    #menu {
        display: flex;
        justify-content: space-evenly;
    }

    .nav-toggle-label {
        display: none;
    }

    #logo-image-name-container {
        font-size: 200%;
    }

    #logo-image-container img {
        width: 89px;
        height: 89px;
    }

    /* Main content */
    main {
        /* Push main content down to accomodate larger header */
        margin-top: 169.7px;
    }

    /* Hero */ 
    #cover-text {
        width: 300px;
        left: 50px;
    }

    #cover-text > h2 {
        font-size: 200%;
    }

}

/* media query:larger devices (laptops and desktops, 992px and larger) */
@media  screen and (min-width: 992px) {
    #menu a:hover {
        color: #010463;
        font-weight: bolder;
        font-style: italic;
    }
}

